--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -12,8 +12,7 @@
 	<link rel="stylesheet" href="css/style_jumbotron.css">
 	<link rel="stylesheet" href="css/dashboard.css">
 	<link rel="stylesheet" href="css/signup.css">
-
-
+	<link rel="stylesheet" href="css/docs.min.css">
 </head>
 <body id="bootstrap-themes" class="swag-line template-index">
 	<div class="navbar navbar-inverse navbar-fixed-top">
@@ -31,8 +30,9 @@
 		            <li><a href="/#/">Home</a></li>
 		            <li data-ng-show="!authentication.user"><a href="/#/signup">Sign up</a></li>
 					<li data-ng-show="!authentication.user"><a href="/#/signin">Sign in</a></li>
-					<li><a href="/#/about">About</a></li>
 					<li><a href="https://shadowsocks.org/en/download/clients.html" target="_blank">Downloads</a></li>
+					<li><a href="/#/about">About</a></li>
+					<li><a href="/#/help">Help</a></li>
 		            <li><a href="/#/panel" data-ng-show="authentication.user">Control Panel</a></li>					
 		        </ul>
 				<ul data-ng-show="authentication.user" class="nav navbar-nav navbar-right">
@@ -59,6 +59,7 @@
 	<script type="text/javascript">window.user=<%- user||'null'%>;</script>
 	<script type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src='js/docs.min.js'></script>
 	<script type="text/javascript" src="/lib/angular/angular.js"></script>
 	<script type="text/javascript" src="/lib/angular-route/angular-route.min.js"></script>
 	<script type="text/javascript" src="/lib/angular-resource/angular-resource.min.js"></script>
@@ -91,6 +92,22 @@
 	<script type="text/javascript" src="/reset_password/config/reset_password.client.route.js"></script>
 
 	<script type="text/javascript" src="/application.js"></script>
+	<script>
+		$(document).on('click', function(event){
+	      var $clickedOn = $(event.target),
+	          $collapsableItems = $('.collapse'),
+	          isToggleButton = ($clickedOn.closest('.navbar-toggle').length == 1),
+	          isLink = ($clickedOn.closest('a').length == 1),
+	          isOutsideNavbar = ($clickedOn.parents('.navbar').length == 0);
+
+	      if( (!isToggleButton && isLink) || isOutsideNavbar ) {
+	        $collapsableItems.each(function(){
+	          $(this).collapse('hide');
+	        });
+	      }
+	    });
+	</script>
+	
 </body>
 
 </html>
