--- a/public/home/views/about.client.view.html
+++ b/public/home/views/about.client.view.html
@@ -1,11 +1,8 @@
 <div ng-controller="homeController" class="container">
 	<div class="col-md-12">
 		<h3>About</h3>
-		<p>This database application development project is about information query of students from Jinan University. The data is from the university, of course. And the framework this project takes advantage of is MEAN(MongoDB, Express.js, Angular.js, Node.js) Stack and MySQL service. MongoDB is a NoSQL database for user signup and validation purpose; Express.js is a web application framework that runs on Node.js. Angular.js is a JavaScript MVC framework that runs in browser JavaScript engines like Goolge V8 engine in Chrome. Node.js is an execution environment for event-driven server-side and networking applications. MySQL is a traditional relational database management system which is used for storing and querying JNU student information. MEAN is a free and open-source JavaScript software stack for building dynamic web sites and web applications. </p>
-		<p>The MEAN stack makes use of MongoDB, Express.js, Angular.js, and Node.js. Because all components of the MEAN stack support programs written in JavaScript, MEAN applications can be written in one language for both server-side and client-side execution environments.</p>
-		<p>I decided to make this project open-source, source code and detailed information on <a href="https://github.com/BruceWangNo1/jnu_database" target="_blank">my Github repository</a>.</p>
-	</div>
-	<div class="col-md-4">
-		<p class="label label-primary" data-ng-show="!authentication.user">Log-in Required</p>
+		<p class="lead">SS-JNU is a one-year college venture project funded by Jinan University. And that is why the the name includes 'JNU'. SS-JNU is developed by Wang Yong and Jialing Yu. The major audience of this project is students from Jinan University.</p>
+		<p class="lead">The framework SS-JNU takes advantage of is M*EAN(MySQL, Express, Angular, Node) Stack. MySQL is a traditional relational database management system for information storage like user information; Express is a web application framework that runs on Node. Angular is a JavaScript MVC framework that runs in brower JavaScript engines like Google V8 engine in Chrome. Node is an execution environment for event-driven server-side and networking applications. M*EAN is a free and open-source JavaScript software stack for building dynamic web sites and web applications. </p>
+		<p class="lead">Since SS-JNU benefited from the two major open-source projects: <a href="https://github.com/mengskysama/shadowsocks/tree/manyuser" target="_blank">Shadowsocks(manyuser)</a> and <a href="https://github.com/orvice/ss-panel" target="_blank">SS-Panel</a>, I decided to make SS-JNU open-source as well to contribute to the open-source community. Source code and detailed information on <a href="https://github.com/BruceWangNo1/ss_jnu" target="_blank">my Github repository</a>.</p>
 	</div>
 </div>
