1.png changed to 1.PNG

--- a/public/home/views/help.client.view.html
+++ b/public/home/views/help.client.view.html
@@ -139,7 +139,7 @@ sudo apt-get install shadowsocks-qt5
 				<h1 class=page-header id='iphone_configuration'>iPhone Configuration</h1>
 				<p>Most of the configuration steps follows Mac.</p>
 				<p>
-					<img src="/iphone_configuration/1.png" style="width:300px">
+					<img src="/iphone_configuration/1.PNG" style="width:300px">
 				</p>
 				<h1 class=page-header id='android_configuration'>Android Configuration</h1>
 				<p>Most of the configuration steps follows Mac.</p>
