chrome brower recommended

--- a/public/home/views/home.client.view.html
+++ b/public/home/views/home.client.view.html
@@ -3,6 +3,7 @@
       <div class="jumbotron">
           <h1>SS-JNU</h1>
           <p class="lead">轻松科学上网 保护个人隐私</p>
+          <p class="lead">Chrome Browser Recommended（推荐使用Chrome浏览器）</p>
           <p><a class="btn btn-lg btn-success" href="/#/signin" role="button">Get Started</a></p>
       </div>
 
